--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @artist.name %></h1>
-<%= image_tag @artist.image_path %>
-<%= link_to "Edit Artist", edit_artist_path(@artist.id) %>
-<%= button_to "Delete Artist", artist_path(@artist.id), method: "delete" %>
+<%= image_tag @artist.image_path %><br>
+<%= link_to "Edit Artist", edit_artist_path(@artist.id) %><br>
+<%= button_to "Delete Artist", artist_path(@artist.id), method: "delete" %><br>
+<%= link_to "New Song", new_artist_song_path(@artist) %>
